# app/Controllers/VWInvoiceController.php
@@ -5,6 +5,12 @@ namespace App\Controllers;
 use App\Models\VWInvoiceModel;
 use CodeIgniter\HTTP\ResponseInterface;
 use CodeIgniter\RESTful\ResourceController;
+use NumberFormatter;
+use PhpOffice\PhpSpreadsheet\Spreadsheet;
+use PhpOffice\PhpSpreadsheet\Writer\Xlsx;
+use PhpOffice\PhpSpreadsheet\Style\Alignment;
+
+use function App\Helpers\formatRupiah;
 
 /**
  * @OA\Tag(
@@ -223,7 +229,7 @@ class VWInvoiceController extends ResourceController
      *     )
      * )
      */
-    public function getAll() 
+    public function getAll()
     {
         try {
 
@@ -237,6 +243,102 @@ class VWInvoiceController extends ResourceController
             return $this->failServerError($e->getMessage());
         }
     }
+
+    /**
+     * @OA\Get(
+     *     path="/api/invoice/excel/create",
+     *     summary="Generate Excel file containing invoice data",
+     *     description="This endpoint generates and downloads an Excel file that includes a summary of all invoice data.",
+     *     tags={"Invoice Pelanggan"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Excel file successfully generated and downloaded.",
+     *         @OA\Header(
+     *             header="Content-Type",
+     *             description="The MIME type of the returned file (application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)",
+     *             @OA\Schema(type="string", example="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet")
+     *         ),
+     *         @OA\Header(
+     *             header="Content-Disposition",
+     *             description="Attachment header with the filename",
+     *             @OA\Schema(type="string", example="attachment; filename=rekap_all_data_invoice_2024-06-14.xlsx")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal server error occurred while generating the Excel file."
+     *     )
+     * )
+     */
+    public function createExcel()
+    {
+
+        $formatter = new NumberFormatter('id_ID', NumberFormatter::CURRENCY);
+        $filename = 'rekap_all_data_invoice_' . date('Y-m-d') . '.xlsx';
+        $spreadsheet = new Spreadsheet();
+        $activeWorksheet = $spreadsheet->getActiveSheet();
+        // $activeWorksheet->setCellValue('A1', 'Hello World !');
+
+        $spreadsheet->getActiveSheet()->mergeCells('A1:D1');
+        $spreadsheet->getActiveSheet()->mergeCells('A3:B3');
+        $spreadsheet->getActiveSheet()->mergeCells('C3:E3');
+
+        $activeWorksheet->setCellValue('A1', 'Rekap All Data Invoice');
+        $activeWorksheet->setCellValue('A3', 'Tanggal');
+        $activeWorksheet->setCellValue('C3', date('Y-m-d'));
+        $activeWorksheet->setCellValue('A4', 'ID');
+        $activeWorksheet->setCellValue('B4', 'ID Penjualan');
+        $activeWorksheet->setCellValue('C4', 'Tanggal');
+        $activeWorksheet->setCellValue('D4', 'ID Pelanggan');
+        $activeWorksheet->setCellValue('E4', 'Alamat');
+        $activeWorksheet->setCellValue('F4', 'Telepon');
+        $activeWorksheet->setCellValue('G4', 'ID Produk');
+        $activeWorksheet->setCellValue('H4', 'Nama Produk');
+        $activeWorksheet->setCellValue('I4', 'Harga');
+        $activeWorksheet->setCellValue('J4', 'Quantity');
+        $activeWorksheet->setCellValue('K4', 'Subtotal');
+
+        $activeWorksheet->getStyle('A1:K4')->getFont()->setBold(true);
+
+        foreach (range('A', 'K') as $columnID) {
+            $activeWorksheet->getColumnDimension($columnID)->setWidth(120, 'pt');
+        }
+
+        $rows = 5;
+        $no = 1;
+
+        $all_data_invoice = $this->model->get_All();
+
+        // dd($all_data_invoice);
+
+        foreach ($all_data_invoice as $user_data) {
+
+            // dd($user_data);
+            $activeWorksheet->setCellValue('A' . $rows, $user_data['id']);
+            $activeWorksheet->setCellValue('B' . $rows, $user_data['id_penjualan']);
+            $activeWorksheet->setCellValue('C' . $rows, $user_data['tanggal']);
+            $activeWorksheet->setCellValue('D' . $rows, $user_data['id_pelanggan']);
+            $activeWorksheet->setCellValue('E' . $rows, $user_data['alamat']);
+            $activeWorksheet->setCellValue('F' . $rows, $user_data['telepon']);
+            $activeWorksheet->setCellValue('G' . $rows, $user_data['id_produk']);
+            $activeWorksheet->setCellValue('H' . $rows, $user_data['nama_produk']);
+            $activeWorksheet->setCellValue('I' . $rows, $formatter->formatCurrency($user_data['harga'], 'IDR'));
+            $activeWorksheet->setCellValue('J' . $rows, $user_data['quantity']);
+            $activeWorksheet->setCellValue('K' . $rows, $formatter->formatCurrency($user_data['subtotal'], 'IDR'));
+            $activeWorksheet->getStyle('A1:K' . ($rows))->getAlignment()->setHorizontal(Alignment::HORIZONTAL_CENTER);
+            $rows++;
+        }
+
+
+        header('Content-Type: application/vnd.openxmlformats-officedocument.spreadsheetml.sheet');
+        header("Content-Disposition: attachment;filename=$filename");
+        header('Cache-Control: max-age=0');
+
+        $writer = \PhpOffice\PhpSpreadsheet\IOFactory::createWriter($spreadsheet, 'Xlsx');
+        $writer = new Xlsx($spreadsheet);
+        $writer->save('php://output');
+    }
+
     public function new()
     {
         //
